<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jtorr.simplenutrition.MainActivity">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:minWidth="120dp"
        android:textSize="25sp"
        android:text="@string/label_name"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_name"
        android:layout_alignBottom="@id/label_name"
        android:layout_alignParentRight="true"
        android:textSize="25sp"
        android:hint="@string/def_name"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/label_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_name"
        android:layout_alignLeft="@+id/label_name"
        android:layout_alignRight="@+id/label_name"
        android:minWidth="120dp"
        android:textSize="25sp"
        android:text="@string/label_age"
        />
    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_age"
        android:layout_alignBottom="@id/label_age"
        android:layout_alignParentRight="true"
        android:textSize="25sp"
        android:hint="@string/def_age"
        android:inputType="number"
        />
    <TextView
        android:id="@+id/label_feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_age"
        android:layout_alignLeft="@+id/label_age"
        android:layout_alignRight="@+id/label_age"
        android:minWidth="120dp"
        android:textSize="25sp"
        android:text="@string/label_feet"
        />
    <EditText
        android:id="@+id/feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_feet"
        android:layout_alignBottom="@id/label_feet"
        android:layout_alignParentRight="true"
        android:textSize="25sp"
        android:hint="@string/def_feet"
        android:inputType="number"
        />
    <TextView
        android:id="@+id/label_inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_feet"
        android:layout_alignLeft="@+id/label_feet"
        android:layout_alignRight="@+id/label_feet"
        android:minWidth="120dp"
        android:textSize="25sp"
        android:text="@string/label_inches"
        />
    <EditText
        android:id="@+id/inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_inches"
        android:layout_alignBottom="@id/label_inches"
        android:layout_alignParentRight="true"
        android:textSize="25sp"
        android:hint="@string/def_inches"
        android:inputType="numberDecimal"
        />
    <TextView
        android:id="@+id/label_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_inches"
        android:layout_alignLeft="@+id/label_inches"
        android:layout_alignRight="@+id/label_inches"
        android:minWidth="120dp"
        android:textSize="25sp"
        android:text="@string/label_weight"
        />
    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_weight"
        android:layout_alignBottom="@id/label_weight"
        android:layout_alignParentRight="true"
        android:textSize="25sp"
        android:hint="@string/def_weight"
        android:inputType="numberDecimal"
        />
    <TextView
        android:id="@+id/label_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_weight"
        android:layout_alignLeft="@+id/label_weight"
        android:layout_alignRight="@+id/label_weight"
        android:minWidth="120dp"
        android:textSize="25sp"
        android:text="@string/label_gender"
        />
    <EditText
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_gender"
        android:layout_alignBottom="@id/label_gender"
        android:layout_alignParentRight="true"
        android:textSize="25sp"
        android:hint="@string/def_gender"
        android:inputType="text"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_gender"
        android:layout_centerHorizontal="true"
        android:text="@string/but_calc"
        android:onClick="calculate"
        />


</RelativeLayout>
