<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/UserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:minWidth="120dp"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:text="@string/UserInfo"
        />
    <TextView
        android:id="@+id/name"
        android:layout_below="@+id/UserInfo"
        android:layout_marginTop="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/def_name"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/weight"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/def_weight"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/age"
        android:layout_below="@+id/weight"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:textSize="30sp"
        android:text="@string/def_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/height"
        android:layout_below="@+id/age"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="30sp"
        android:text="@string/def_feet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/gender"
        android:layout_below="@+id/height"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:textSize="30sp"
        android:text="@string/def_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>