<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/UserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:minWidth="120dp"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:text="@string/UserLogin"
        />
    <EditText
        android:id="@+id/UserNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="30sp"
        android:hint="@string/UserName"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserNameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="30sp"
        android:hint="@string/Password"
        android:inputType="text"
        />
</RelativeLayout>